--- a/index.html
+++ b/index.html
@@ -762,7 +762,7 @@
 
     <script>
         // --- KONFIGURASI API GEMINI ---
-        const apiKey = ""; // API Key
+        const apiKey = "AIzaSyCysNy2-QedkfKFJBeI5an9olKi8wFto2U"; // API Key
         const modelName = "gemini-2.5-flash-preview-09-2025";
         const apiUrlBase = `https://generativelanguage.googleapis.com/v1beta/models/${modelName}:generateContent?key=${apiKey}`;
 
