--- a/index.html
+++ b/index.html
@@ -1002,7 +1002,7 @@
                 loadingElement.classList.remove('hidden');
                 promptElement.textContent = "Sedang memuat...";
 
-                const systemPrompt = "Act as a supportive mental health coach. Generate a single, unique, and insightful reflective journaling question that encourages emotional exploration or self-care. The response MUST be ONLY the question itself, without any introductory phrases, greetings, or descriptions. Use Indonesian.";
+                const systemPrompt = "Act as a creative reflection guide. Generate a single, concise, and intriguing journaling question. The question should be short but make the user think deeply (menarik untuk dikulik). The response MUST be ONLY the question itself, without any introductory phrases. Use Indonesian.";
                 const userQuery = `Generate a reflective question. The user's last mood recorded was ${currentMood}.`;
                 
                 try {
