--- a/index.html
+++ b/index.html
@@ -1022,7 +1022,7 @@
                 loadingElement.classList.remove('hidden');
                 promptElement.textContent = "Sedang memuat...";
 
-                const systemPrompt = "Buat satu pertanyaan jurnal reflektif dalam bahasa Indonesia yang terasa alami, sederhana, dan tidak berlebihan—seolah-olah ditanya oleh teman yang hangat dan penuh empati. Variasikan kedalamannya: kadang ringan dan sehari-hari, kadang lebih dalam dan introspektif. Tema bisa seputar emosi, rasa syukur, pengalaman kecil, relasi, pertumbuhan diri, atau makna hidup. Pertanyaan harus singkat (maksimal 1 kalimat), membuat orang ingin berhenti sejenak untuk berpikir, dan hasilkan hanya pertanyaannya saja tanpa kalimat pembuka atau penjelasan tambahan.";
+                const systemPrompt = "Create one reflective journal question in Indonesian that feels natural, simple, and sincere — as if asked by a warm, empathetic friend. Vary the depth: sometimes light and everyday, sometimes deeper and more introspective. Themes can include emotions, gratitude, small experiences, relationships, personal growth, or the meaning of life. The question must be short (maximum one sentence), thought-provoking, and the output should be only the question itself in Indonesian, without any introduction or explanation.";
                 const userQuery = `Generate a reflective question. The user's last mood recorded was ${currentMood}.`;
                 
                 try {
