--- a/index.html
+++ b/index.html
@@ -132,10 +132,11 @@
         #journal-detail-modal {
             transition: opacity 0.3s ease-in-out;
         }
-        #journal-detail-content {
-            transition: all 0.3s ease-in-out;
-            max-height: 80vh; /* (BARU) Agar bisa di-scroll di HP */
-            overflow-y: auto; /* (BARU) */
+       #journal-detail-content {
+            transition: all 0.3s ease-in-out;
+            max-height: 80vh; /* Agar bisa di-scroll di HP */
+            overflow-y: auto; /* Biarkan scroll vertikal */
+            overflow-x: hidden; /* (FIX) Tambahkan ini untuk matikan scroll horizontal */
         }
         /* (BARU) Scrollbar kustom untuk modal */
         #journal-detail-content::-webkit-scrollbar { width: 5px; }
@@ -753,7 +754,7 @@
     </main>
 
     <!-- (BARU) Modal Detail Jurnal -->
-   <div id="journal-detail-modal" class="fixed inset-0 z-50 bg-black/70 backdrop-blur-sm flex items-center justify-center p-6 hidden opacity-0" onclick="hideJournalDetail()">
+  <div id="journal-detail-modal" class="fixed inset-0 z-50 bg-black/70 backdrop-blur-sm flex items-center justify-center p-6 hidden opacity-0" onclick="hideJournalDetail()">
         
         <div id="journal-detail-content" class="bg-gray-800 w-full max-w-lg rounded-2xl shadow-lg border border-gray-700 p-6 md:p-8 relative opacity-0 scale-95" onclick="event.stopPropagation()">
             
