--- a/index.html
+++ b/index.html
@@ -945,7 +945,7 @@
 
     <!-- (BARU) Tombol Menu Mobile (Hamburger) -->
     <!-- Tombol ini muncul di mobile dan akan mentrigger sidebar -->
-    <button id="mobile-menu-btn" class="fixed top-4 left-4 z-50 rounded-md bg-white/80 p-2 text-gray-900 shadow-md backdrop-blur-md transition-all duration-300 ease-in-out hidden opacity-0 md:hidden">
+     <button id="mobile-menu-btn" class="fixed top-4 right-4 z-50 rounded-md bg-white/80 p-2 text-gray-900 shadow-md backdrop-blur-md transition-all duration-300 ease-in-out hidden opacity-0 md:hidden">
         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="h-6 w-6"><line x1="3" y1="12" x2="21" y2="12"></line><line x1="3" y1="6" x2="21" y2="6"></line><line x1="3" y1="18" x2="21" y2="18"></line></svg>
     </button>
 
