--- a/index.html
+++ b/index.html
@@ -1357,7 +1357,7 @@
                 loadingElement.classList.remove('hidden');
                 promptElement.textContent = "Sedang memuat...";
 
-                const systemPrompt = "Berikan satu pertanyaan reflektif singkat (1 kalimat) untuk jurnal harian. Fokus pada rasa syukur, pencapaian kecil, kejadian hari ini atau perasaan hari ini. Berikan dalam Bahasa Indonesia. Jangan ada katai dami dan sebagianya berikan yang kritis tapi juga easy conservation";
+                const systemPrompt = "Berikan satu pertanyaan reflektif singkat (1 kalimat) untuk jurnal harian. Fokus pada rasa syukur, pencapaian kecil, kejadian hari ini atau perasaan hari ini. Berikan dalam Bahasa Indonesia. Jangan ada kata damai dan sebagainya, berikan yang kritis tapi juga easy conservation dan pakai kamu karena seperti memberi pertanyaan ke pengguna. Lalu juga pertanyaannya jangan terlalu kaku tapi informal aja dan oke buat bahan reflektif ke temen";
                 const userQuery = `Generate a reflective question. The user's last mood recorded was ${currentMood}.`;
                 
                 try {
